Alterando o caminho das imagens

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
     flex-direction: column;
     height: 100vh;
     width: 100vw;
-    background-image: url(/pngtree-animated-mountains-landscape-wallpaper-4k-and-1080p-2px-image_2565761.jpg);
+    background-image: url(../pngtree-animated-mountains-landscape-wallpaper-4k-and-1080p-2px-image_2565761.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     -webkit-text-stroke-width: 1px;
